--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,9 +1,102 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : 31 ene. 2022, 23:43:14
-    Author     : pablo
-*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+
+body {
+   margin: 0;
+   padding: 0; 
+   background: linear-gradient( 120deg,#65098C, #E6B8FA);
+   height: 100vh;
+   overflow: hidden;  
+}
+
+
+/* El transform permite mover o rotar los elementos, el translate sirve para  posicionarlo en x y y */
+.content{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 10px  10px  15px rgba( 0,0,0,0.5);
+    transform: translate(-50%,-50%);
+}
+
+
+.content{
+    width: 400px;
+    width:100%;
+    background:url(../images/textura.jpg);
+    background-size: cover;
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    box-shadow: 10px  10px  15px rgba( 0,0,0,0.5);
+    transform: translate(-50%,-50%);
+    
+}
+
+
+.content h1{
+    text-align: center;
+    padding: 20px 0;
+    border-bottom: 1px solid silver;
+}
+
+.content form {
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
+form .txt_field{
+    position:relative;
+    border-bottom: 2px solid #8E0CC7;
+    margin: 30px 0;
+    color: #111;
+}
+
+.txt_field input {
+    width: 100%;
+    padding: 0 5px;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    background: none;
+    outline: none;  
+}
+
+.txt_field label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    color: #186ED0;
+    font-size: 16px;
+    pointer-event: none;
+}
+
+.txt_field label:hover{
+    transform: translateY(-200%);
+}
+
+a{
+   display: inline-block;
+   font-size: 1 em;
+   background: #2184F5;
+   padding: 10px 30px;
+   text-transform: uppercase;
+   text-decoration: none;
+    
+}
+
+
+a:hover {
+    background: #ff0033;
+    letter-spacing: 0.5em;
+}
